[package]
name = "symmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"

[profile.release]
strip = true # automatically strip debugging symbols from the binary.
opt-level = "s" # optimise for size.
lto = true # Enable link time optimisation.
codegen-units = 1 # Maximise size reduction.
